--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
           <li><a href='/'>Home</a></li>
           <li>|</li>
           <li><a href='#'>Blog</a></li>
+          <li>|</li>
+          <li><a href='/register'>Register</a></li>
         </ul>
       </nav>
     </header>
